examples/test/testpolicy18357.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18357
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key35: value8
      key5: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value19
          key16: value39
      podSelector:
        matchLabels:
          key8: value1
          key31: value46
